fixed skill tags, some css spacing

--- a/css/project.css
+++ b/css/project.css
@@ -223,7 +223,7 @@
   font-weight: 500;
   font-size: 60px;
   text-align: left;
-  max-width: 75%;
+  max-width: 90%;
 }
 
 .page-quote-author {
